# gyana

./: .babelrc  .env.docker  .env.enc  .envrc  .gitignore  .prettierrc.js  .watchmanconfig  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile.dev  LICENSE  Procfile  README.md  cypress.json  docker-compose.yml  gunicorn.conf.py  gyana-1511894275181-50f107d4db00.json.enc  justfile  manage.py  package-lock.json  package.json  pegasus-config.yaml  postcss.config.js  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tailwind.config.js  tsconfig.json  webpack.config.js
.github/: pull_request_template.md
.github/workflows/: cypress.yml  pytest.yml
apps/: conftest.py
apps/appsumo/: account.py  admin.py  config.py  forms.py  frames.py  models.py  tables.py  urls.py  views.py
apps/base/: BIGQUERY.md  access.py  account.py  admin.py  aggregations.py  alpine.py  analytics.py  apps.py  bigquery.py  celery.py  clickjacking.py  clients.py  clone.py  converters.py  crispy.py  cypress_mail.py  cypress_urls.py  dashboard.py  errors.py  fields.py  forms.py  formset_update_view.py  formsets.py  frames.py  live_update_form.py  live_views.py  menu.py  middleware.py  mixins.py  models.py  schema_form_mixin.py  storage.py  table.py  table_data.py  tables.py  tasks.py  time.py  turbo.py  utils.py  views.py  (+1 more)
apps/blog/: models.py  sitemaps.py  urls.py  views.py
apps/cnames/: access.py  admin.py  apps.py  forms.py  frames.py  heroku.py  middleware.py  models.py  signals.py  tables.py  urls.py  views.py
apps/columns/: bigquery.py  crispy.py  currency_symbols.py  engine.py  exceptions.py  fields.py  forms.py  formula.lark  functions.json  models.py  transformer.py  types.py  widgets.py
apps/connectors/: FIVETRAN.md  access.py  admin.py  apps.py  bigquery.py  clone.py  config.py  fivetran.py  forms.py  frames.py  metadata.yaml  mixins.py  models.py  periodic.py  rest.py  services.yaml  signals.py  sync.py  tasks.py  urls.py  utils.py  views.py  widgets.py
apps/controls/: access.py  bigquery.py  engine.py  forms.py  frames.py  mixins.py  models.py  rest.py  serializers.py  urls.py  views.py
apps/cookiecutter-app/: cookiecutter.json
apps/customapis/: bigquery.py  forms.py  models.py  tasks.py  urls.py  views.py
apps/customreports/: access.py  forms.py  frames.py  models.py  tables.py  urls.py  views.py
apps/cypress/: mail.py  views.py
apps/dashboards/: access.py  admin.py  forms.py  frames.py  mixins.py  models.py  rest.py  serializers.py  tables.py  urls.py  utils.py  views.py  widgets.py
apps/dataflows/: admin.py  forms.py  models.py  nodes.py  serializers.py  tables.py  urls.py  views.py
apps/datasets/: forms.py  models.py  tables.py  tasks.py  urls.py  views.py
apps/exports/: access.py  admin.py  bigquery.py  emails.py  frames.py  models.py  tasks.py  urls.py
apps/filters/: bigquery.py  engine.py  forms.py  get_filter_query.py  models.py  rest.py  urls.py  views.py  widgets.py
apps/integrations/: DIAGRAM.md  access.py  admin.py  bigquery.py  cache.py  clone.py  emails.py  filters.py  fivetran.py  forms.py  frames.py  mixins.py  models.py  periodic.py  rest.py  serializers.py  tables.py  tasks.py  urls.py  utils.py  views.py
apps/invites/: admin.py  apps.py  forms.py  frames.py  models.py  signals.py  tables.py  urls.py  views.py
apps/learn/: models.py  urls.py  views.py
apps/nodes/: _sentiment_utils.py  _utils.py  access.py  admin.py  apps.py  bigquery.py  clone.py  config.py  engine.py  exceptions.py  forms.py  formsets.py  frames.py  models.py  nodes.py  rest.py  serializers.py  signals.py  tables.py  urls.py  views.py  widgets.py
apps/oauth2/: forms.py  frames.py  models.py  tables.py  urls.py  views.py
apps/projects/: AUTOMATE.md  access.py  admin.py  emails.py  forms.py  frames.py  mixins.py  models.py  periodic.py  rest.py  schedule.py  tables.py  tasks.py  urls.py  views.py  widgets.py
apps/runs/: SCHEDULE.md  apps.py  models.py  serializers.py  signals.py  tables.py
apps/sheets/: access.py  admin.py  bigquery.py  forms.py  frames.py  models.py  periodic.py  sheets.py  tasks.py  urls.py  views.py
apps/subscriptions/: apps.py  decorators.py  helpers.py  metadata.py  serializers.py  urls.py  views.py  webhooks.py
apps/tables/: DIAGRAM.md  admin.py  apps.py  bigquery.py  clone.py  filters.py  forms.py  models.py  rest.py  serializers.py  signals.py  tables.py  tables.py.f043cf273b149c05bc671c39881c960e.tmp  urls.py  views.py  widgets.py
apps/teams/: access.py  account.py  adapter.py  admin.py  api_url_helpers.py  apps.py  bigquery.py  config.py  decorators.py  flag.py  forms.py  invitations.py  mixins.py  models.py  paddle.py  periodic.py  permissions.py  roles.py  serializers.py  signals.py  tables.py  tasks.py  urls.py  util.py  utils.py  views.py
apps/templates/: bigquery.py  duplicate.py  forms.py  models.py  tables.py  urls.py  views.py
apps/uploads/: access.py  admin.py  bigquery.py  forms.py  frames.py  models.py  rest.py  tasks.py  urls.py  views.py  widgets.py
apps/users/: adapter.py  admin.py  apps.py  forms.py  frames.py  helpers.py  models.py  signals.py  urls.py  views.py
apps/utils/: access.py  clients.py  cypress_urls.py  formset_layout.py  formset_update_view.py  frames.py  live_update_form.py  live_update_view.py  models.py  schema_form_mixin.py  segment_analytics.py  slug.py  table.py  table_data.py  templates.py  test.py  views.py
apps/web/: cache.py  content.py  context_processors.py  frames.py  meta.py  sitemaps.py  (+2 more)
assets/: global.js
docs/: BIGQUERY.md  FIVETRAN.md  INTEGRATIONS.md  PATTERNS.md  SELFHOST.md  SETTINGS.md  STYLES.md  TEMPLATES.md  USERS.md
gyana/: celery.py  context_processors.py  settings.py  settings_heroku.py  settings_local.py  settings_production.example.py  urls.py  wsgi.py
lib/: bigquery.py  cache.py  chart.py  clients.py  compiler.py  dag.py  decorators.py  fivetran.py  functions.json  fusioncharts.py  icons.py  intermediate.py  operations.py  patch.py  services.yaml
requirements/: prod-requirements.txt  requirements.txt
templates/: 404.html  500.html
(+1816 files in other folders)
